--- a/.docker/docker-compose.yaml
+++ b/.docker/docker-compose.yaml
@@ -1,6 +1,5 @@
-version: '3'
 services:
-  andon_client:
+  visualizer:
     user: "${UID:-1000}:${GID:-1000}"
     build:
       context: ..
@@ -18,4 +17,10 @@ services:
     ipc: host  # Add this for X11 shared memory
     stdin_open: true  # Enable stdin
     tty: true        # Enable terminal
-    command: bash -c "python3 /app/scripts/main.py --ip 10.10.10.1 --debug"
+    command: bash -c "python3 /app/scripts/main.py --ip 10.10.10.1"
+
+  headless:
+    extends: visualizer
+    depends_on:
+      - visualizer
+    command: bash -c "python3 /app/scripts/main.py --ip 10.10.10.1 --headless"
