--- a/.docker/docker-compose.yaml
+++ b/.docker/docker-compose.yaml
@@ -17,10 +17,4 @@ services:
     ipc: host  # Add this for X11 shared memory
     stdin_open: true  # Enable stdin
     tty: true        # Enable terminal
-    command: bash -c "python3 /app/scripts/main.py --ip 10.10.10.1"
-
-  headless:
-    extends: visualizer
-    depends_on:
-      - visualizer
-    command: bash -c "python3 /app/scripts/main.py --ip 10.10.10.1 --headless"
+    command: bash -c "python3 /app/scripts/visualizer.py --ip 10.10.10.1"
